# faxanatools

./: .gitignore  LICENSE  README.md  pyproject.toml
faxanatools/: decoder.py  deserializer.py  encoder.py  iscripts.py  messages.py  rom.py  serializer.py  shops.py
faxanatools/cli/: main.py
